chore: Enable preview